Fix layout on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,6 +42,21 @@ body {
 
 .wrapper {
     max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media (max-width: 767px) {
+    .site-header,
+    .page-content,
+    .site-footer {
+        max-width: 100%;
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+    .wrapper {
+        max-width: 100%;
+    }
 }
 
 img {
